Added Multi Language support

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Figma-Rescript",
-  "id": "1395446245211298509",
+  "name": "Figma-to-Rescript",
+  "id": "1408123926034581384",
   "api": "1.0.0",
   "main": "dist/code.js",
   "capabilities": [],
