--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "@vanilla-extract/css": "^1.0.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
@@ -25,8 +23,12 @@
     "webpack-cli": "^3.3.6"
   },
   "devDependencies": {
-    "@figma/eslint-plugin-figma-plugins": "*",
-    "@figma/plugin-typings": "^1.97.0",
+    "@babel/core": "7.13.15",
+    "@babel/preset-env": "7.13.15",
+    "@babel/preset-typescript": "7.13.0",
+    "@figma/plugin-typings": "1.97.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "css-loader": "5.2.5",
@@ -38,7 +40,6 @@
     "prettier": "2.2.1",
     "style-loader": "2.0.0",
     "ts-loader": "8.0.17",
-    "ts-node": "9.1.1",
     "typescript": "5.4.2",
     "undici-types": "^6.19.2",
     "url-loader": "4.1.1"
