--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+permissions: 
+  statuses: write
+  pull-requests: write
 
 jobs:
   build:
@@ -26,3 +29,7 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: Update Status
+      uses: ouzi-dev/commit-status-updater@v2
+      with:
+        status: "${{ job.status }}"
